# silas

./: .gitignore  Cargo.toml  Gemfile  Readme.md  __main__.py  build.rb  builder.py  deploy.sh  logger.rb  orgparse.rb  render.rb  silas.rb  token_helpers.rb  tokenizer.rb  worktree.rb
.githooks/: pre-commit
css/: style.css
org/: parser.rb  token_helpers.rb  tokenizer.rb  types.rb
scripts/: deploy.sh  update_mathjax.sh
src/: builder.rs  main.rs
src/builder/: context.rs  fileutil.rs  org.rs  rendering.rs  router.rs  rss.rs  serialize.rs  theme.rs  website.rs  website_new.rs
ssg/: builder.rb  project.rb  renderer.rb  types.rb
templates/: post.html.erb
test/: index.org  simple.org  simple.rb
test/test_project/: ideas.org  index.org  other.org
test/test_project/subfolder/: a_file_in_the_subfolder.org
testsite/: index.org  unpublished.org
testsite/default/: index.org
theme/: category.html  layout.hbs  layout.html  layout.html.erb  page.hbs  page.html  page.html.erb  post.hbs  post.html.erb  project.hbs  project.html.erb
theme/css/: code.css  style.css
theme/projects/: multi.hbs
