[package]
name = "silas"
version = "0.1.0"
authors = ["Johannes Huwald <johannes.huwald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.8.4"
syntect = "4.5.0"
handlebars = "3.5.2"
serde_json = "1.0"
